<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9EAEE"
    android:orientation="vertical"
    tools:context=".AboutApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="#03A9F4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <!--Top Profile Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/app_name"
                        android:textColor="#424242"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/company_name"
                        android:gravity="center"
                        android:textSize="18sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/tickinsidecircle" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="7600+"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="Dictionary"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/star" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="4.2/5"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/ratings"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <!--Option Bar-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="horizontal">
            </LinearLayout>

            <!--Bootom Cards with sections-->
            <LinearLayout
                android:id="@+id/personalinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--About Me Card-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/app_info" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="horizontal">
            </LinearLayout>

            <!--Experience Bottom Cards-->
            <LinearLayout
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/google_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="6dp"
                            android:src="@drawable/playstore" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="@string/app_name"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="Google Play"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/instagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="6dp"
                            android:src="@drawable/instagram" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="javokhir_achilov_"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="Instagram"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:id="@+id/telegram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="6dp"
                            android:src="@drawable/telegram" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="JavokhirachilovBlog"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="Telegram"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="56dp">

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Version: "
                        android:fontFamily="@font/proximanovaregular"
                        android:textSize="17sp" />

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:fontFamily="@font/proximanovaregular"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>